--- a/Config/DefaultEditor.ini
+++ b/Config/DefaultEditor.ini
@@ -6,3 +6,16 @@ bAllowClassAndBlueprintPinMatching=true
 bReplaceBlueprintWithClass= true
 bDontLoadBlueprintOutsideEditor= true
 bBlueprintIsNotBlueprintType= true
+
+[/Script/AdvancedPreviewScene.SharedProfiles]
+
+[/Script/UnrealEd.LevelEditor2DSettings]
+bEnable2DWidget=True
+bEnableSnapLayers=True
+SnapAxis=Y
++SnapLayers=(Name="Foreground Extreme",Depth=1000.000000)
++SnapLayers=(Name="Foreground",Depth=500.000000)
++SnapLayers=(Name="Main",Depth=0.000000)
++SnapLayers=(Name="Background",Depth=-500.000000)
++SnapLayers=(Name="Background extreme",Depth=-1000.000000)
+
